--- a/src/components/znkCategoryStats/scss/znkCategoryStats.scss
+++ b/src/components/znkCategoryStats/scss/znkCategoryStats.scss
@@ -1,4 +1,3 @@
-
 .znk-category-stats{
         overflow: hidden;
         clear: both;
@@ -7,16 +6,6 @@
             @include dimension(300px, auto);
             display: flex;
             padding: 15px;
-
-            .category-short-name {
-                @include dimension(30px, 30px);
-                @include text-style(14px, $fcColor2, Lato, $regularFontWeight);
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border-radius: 50%;
-                margin-right: 15px;
-            }
 
             &.math, &.mathlvl1, &.mathlvl2 {
                 .category-short-name {
@@ -46,7 +35,6 @@
                     @include text-style(18px, $fcColor6, Lato, $regularFontWeight);
                     display: inline-block;
                     text-align: left;
-                    padding-top: 5px;
                 }
 
                 .subject-progress-wrapper {
@@ -97,57 +85,60 @@
                     }
                 }
 
-                .average-time-wrapper {
-                    margin-top: 7px;
-                    .znkCategoryStats-clock-icon{
-                        float: left;
-                        margin-right: 8px;
-                        width: 11px;
-                        height: auto;
-                    }
-
-                    span {
-                        @include text-style(13px, $fcColor9, Quicksand, $regularFontWeight);
-                        line-height: 13px;
-                        float: left;
-                    }
-                }
-
-                .specific-categories{
-                    text-align: left;
-                    margin-top: 15px;
+                .stats-footer {
+                    width: 100%;
                     display: flex;
-                    align-items: baseline;
-                    cursor: pointer;
-                    position: relative;
-                    .show-details-title{
-                        @include text-style(14px, $fcColor5, Lato, $regularFontWeight);
+                    justify-content: space-between;
+                    .average-time-wrapper {
+                        margin-top: 7px;
+                        .znkCategoryStats-clock-icon{
+                            float: left;
+                            margin-right: 8px;
+                            width: 11px;
+                            height: auto;
+                        }
+
+                        span {
+                            @include text-style(13px, $fcColor9, Quicksand, $regularFontWeight);
+                            line-height: 13px;
+                            float: left;
+                        }
                     }
-                    .dropdown-arrow-icon{
-                        width: 9px;
-                        height: 9px;
-                        transform: rotate(-90deg);
-                        margin-left: 5px;
-                        svg{
+
+                    .show-details{
+                        margin-top: 3px;
+                        align-items: baseline;
+                        cursor: pointer;
+                        .show-details-title{
+                            @include text-style(14px, $fcColor5, Lato, $regularFontWeight);
+                            margin-right: 5px;
+                        }
+                        .dropdown-arrow-icon{
                             width: 9px;
                             height: 9px;
+                            transform: rotate(-90deg);
+                            margin-left: 5px;
+                            svg{
+                                width: 9px;
+                                height: 9px;
+                            }
+
+                            svg *{
+                                stroke: $fcColor5;
+                                stroke-width: 25px;
+                            }
                         }
 
-                        svg *{
-                            stroke: $fcColor5;
-                            stroke-width: 25px;
+                        md-menu.specific-menu {
+                            position: relative;
+                            .menu-btn{
+                                display: flex;
+                                align-items: baseline;
+                            }
+
                         }
+
                     }
-
-                    md-menu.specific-menu {
-                        position: relative;
-                        .menu-btn{
-                            display: flex;
-                            align-items: baseline;
-                        }
-
-                    }
-
                 }
             }
 
@@ -159,3 +150,111 @@
         }
     }
 
+md-menu-content.subscore-specific-content{
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+    .icons-wrap{
+        display: flex;
+        justify-content: flex-end;
+        margin: 0 12px 12px;
+        .stat-icon-wrap{
+            width: 20px;
+
+            svg-icon {
+                svg {
+                    width: 9px;
+                    height: 9px;
+                }
+                &.v-icon *{
+                    stroke: $fcColor7;
+                }
+                &.x-icon *{
+                    line {
+                        stroke: $fcColor10;
+                    }
+                }
+                &.v-icon *{
+                    stroke: $fcColor7;
+                }
+            }
+        }
+    }
+    md-menu-item.specific-wrap{
+        @include text-style(12px, $fcColor9, Lato, $regularFontWeight);
+        margin-top: 5px;
+        display: flex;
+        flex-grow: 1;
+        padding-left: 10px;
+        min-height: 25px;
+        height: 25px;
+        line-height: 25px;
+        position: relative;
+        z-index: 1;
+
+        .specific-name{
+            flex-grow: 1;
+            text-align: left;
+            padding-left: 5px;
+            &.highlight{
+                color: $fcColor10;
+            }
+        }
+        .category-data{
+            display: flex;
+            flex-direction: row;
+            text-align: center;
+            @include text-style(12px, $fcColor6, Lato, $regularFontWeight);
+
+            .level-progress{
+                width: 40px;
+                &.highlight{
+                    color: $fcColor10;
+                }
+            }
+            .correct{
+                width: 20px;
+                color: $fcColor7;
+            }
+            .unanswered{
+                width: 20px;
+            }
+            .wrong{
+                width: 20px;
+                color: $fcColor10;
+            }
+        }
+
+
+    }
+
+    md-menu-item.specific-wrap *{
+        width: auto;
+    }
+
+    .triangle-wrap{
+        position: absolute;
+        top:32%;
+        left:-26px;
+        width: 26px;
+        height: 26px;
+        .triangle {
+            width: 26px;
+            height: 26px;
+            position: relative;
+            overflow: hidden;
+            box-shadow: 0 16px 10px -17px rgba(0, 0, 0, 0.5);
+        }
+        .triangle:after {
+            content: "";
+            position: absolute;
+            width: 13px;
+            height: 13px;
+            background: white;
+            -webkit-transform: rotate(45deg);
+            top: 8px;
+            left: 19px;
+            box-shadow: -1px -1px 10px -2px rgba(0, 0, 0, 0.5);
+        }
+    }
+}
