--- a/src/components/znkExercise/toolbox/scss/_draw-tool.scss
+++ b/src/components/znkExercise/toolbox/scss/_draw-tool.scss
@@ -5,10 +5,12 @@ znk-exercise{
 
         &.no-pointer-events{
             pointer-events: none;
+            overflow: hidden;
         }
 
         &.crosshair-cursor{
             cursor: crosshair;
+            overflow: hidden;
         }
     }
 }
