fixed znk exercise scroll

--- a/src/components/znkExercise/scss/_znk-exercise-desktop.scss
+++ b/src/components/znkExercise/scss/_znk-exercise-desktop.scss
@@ -125,6 +125,10 @@ znk-exercise.desktop {
                         height: 100%;
                     }
                 }
+                .swiper-slide-active {
+                  overflow: auto;
+                  height: 95%;
+                }
             }
         }
     }
