--- a/src/components/znkExercise/main.scss
+++ b/src/components/znkExercise/main.scss
@@ -21,6 +21,10 @@ znk-exercise {
         display: block;
     }
 
+    question-builder {
+        height: 100%;
+    }
+
     .question-bottom-shadow{
         transition: all 0.1s linear;
         position: absolute;
