znk-exercise fix overflow

--- a/src/components/znkExercise/scss/_znk-exercise-desktop.scss
+++ b/src/components/znkExercise/scss/_znk-exercise-desktop.scss
@@ -126,7 +126,7 @@ znk-exercise.desktop {
                     }
                 }
                 .swiper-slide {
-                  height: 93%;
+                    height: calc(100% - 55px);
                 }
             }
         }
