--- a/src/components/znkExercise/toolbox/directives/znkExerciseDrawTool/znkExerciseDrawTool.template.html
+++ b/src/components/znkExercise/toolbox/directives/znkExerciseDrawTool/znkExerciseDrawTool.template.html
@@ -6,11 +6,19 @@
 </svg-icon>
 <!--<svg-icon name="znk-exercise-pointer">-->
 <!--</svg-icon>-->
-<svg-icon name="znk-exercise-pencil"
+<!--<svg-icon name="znk-exercise-pencil"
           ng-click="d.toolClicked(d.TOOLS.PENCIL)"
           ng-class="{
             active:(d.drawMode === d.DRAWING_MODES.VIEW_DRAW) && (d.drawMode !== d.DRAWING_MODES.NONE)
           }">
+</svg-icon>-->
+
+<svg-icon name="znk-exercise-pencil"
+          ng-click="d.openColorPicker()"
+          ng-class="{
+  active:(d.drawMode === d.DRAWING_MODES.VIEW_DRAW) && (d.drawMode !== d.DRAWING_MODES.NONE)
+}">
+<znk-color-picker ng-if="d.showColorPicker"></znk-color-picker>
 </svg-icon>
 <svg-icon name="znk-exercise-eraser"
           ng-click="d.toolClicked(d.TOOLS.ERASER)"
