--- a/src/components/znkExercise/main.scss
+++ b/src/components/znkExercise/main.scss
@@ -5,6 +5,7 @@
 @import 'scss/znk-exercise-desktop',
         'scss/znk-exercise-pager',
         'toolbox/scss/draw-tool',
+        'toolbox/scss/color-picker',
         'toolbox/scss/tool-box';
 
 znk-exercise {
