--- a/src/components/znkExercise/toolbox/scss/_color-picker.scss
+++ b/src/components/znkExercise/toolbox/scss/_color-picker.scss
@@ -1,10 +1,11 @@
 .colors-container {
   position: absolute;
   top: 45px;
-  right: -40px;
+  left: -45px;
   width: 38px;
   background-color: #b37c7c;
   height: 100px;
   border-radius: 8px;
   box-shadow: 0px 1px 6px 0px #8a8a8a;
+  z-index: 1;
 }
