--- a/src/components/znkExercise/toolbox/directives/znkColorPicker/znkColorPicker.template.html
+++ b/src/components/znkExercise/toolbox/directives/znkColorPicker/znkColorPicker.template.html
@@ -1,3 +1,5 @@
 <div class="colors-container">
-  
+  <div class="color-items">
+    <div class="color-item" ng-repeat="color in vm.colorsArr" ng-style="{'background-color': color:code}"></div>
+  </div>
 </div>
