--- a/src/components/znkExercise/toolbox/scss/_color-picker.scss
+++ b/src/components/znkExercise/toolbox/scss/_color-picker.scss
@@ -1,11 +1,24 @@
 .colors-container {
   position: absolute;
-  top: 45px;
+  top: 0px;
   left: -45px;
   width: 38px;
   background-color: #b37c7c;
-  height: 100px;
   border-radius: 8px;
   box-shadow: 0px 1px 6px 0px #8a8a8a;
   z-index: 1;
+  display: flex;
+  justify-content: center;
+  .color-items {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    .color-item {
+      width: 20px;
+      height: 20px;
+      margin: 5px;
+      border: 1px solid #bdbdbd;
+      border-radius: 50%;  
+    }
+  }
 }
