--- a/src/components/znkExercise/toolbox/scss/_color-picker.scss
+++ b/src/components/znkExercise/toolbox/scss/_color-picker.scss
@@ -18,7 +18,11 @@
       height: 20px;
       margin: 5px;
       border: 1px solid #bdbdbd;
-      border-radius: 50%;  
+      border-radius: 50%;
+      transition: .5s box-shadow linear;
+    }
+    .color-item:hover {
+      box-shadow: 0px 1px 3px 1px #7d7d7d;
     }
   }
 }
