--- a/src/components/znkExercise/toolbox/directives/znkExerciseDrawTool/znkExerciseDrawTool.template.html
+++ b/src/components/znkExercise/toolbox/directives/znkExerciseDrawTool/znkExerciseDrawTool.template.html
@@ -14,12 +14,12 @@
 </svg-icon>-->
 
 <svg-icon name="znk-exercise-pencil"
-          ng-click="d.toolClicked(d.TOOLS.PENCIL)"
+          ng-click="d.initiateDrawColor(d.TOOLS.PENCIL)"
           ng-class="{
   active:(d.drawMode === d.DRAWING_MODES.VIEW_DRAW) && (d.drawMode !== d.DRAWING_MODES.NONE)
 }">
 </svg-icon>
-<znk-color-picker picked-color="d.pickedColor" ng-if="d.showColorPicker"></znk-color-picker>
+<znk-color-picker picked-color-cb="d.toolClicked" ng-if="d.showColorPicker"></znk-color-picker>
 <svg-icon name="znk-exercise-eraser"
           ng-click="d.toolClicked(d.TOOLS.ERASER)"
           ng-class="{
