--- a/src/components/znkExercise/toolbox/scss/_color-picker.scss
+++ b/src/components/znkExercise/toolbox/scss/_color-picker.scss
@@ -19,7 +19,8 @@
       margin: 5px;
       border: 1px solid #bdbdbd;
       border-radius: 50%;
-      transition: .2s box-shadow linear;
+      transition: .2s box-shadow ease-out;
+      cursor: pointer;
     }
     .color-item:hover {
       box-shadow: 0px 1px 1px 1px #7d7d7d;
