--- a/src/components/znkExercise/toolbox/scss/_draw-tool.scss
+++ b/src/components/znkExercise/toolbox/scss/_draw-tool.scss
@@ -13,6 +13,13 @@ znk-exercise{
     }
 }
 
+.color-picker-btn {
+  width: 23px;
+  height: 23px;
+  border-radius: 50%;
+  border: 1px solid rgb(189, 189, 189);
+}
+
 znk-exercise-draw-tool{
     height: 100%;
     display: flex;
