--- a/src/components/znkExercise/toolbox/directives/znkExerciseDrawTool/znkExerciseDrawTool.template.html
+++ b/src/components/znkExercise/toolbox/directives/znkExerciseDrawTool/znkExerciseDrawTool.template.html
@@ -19,7 +19,7 @@
   active:(d.drawMode === d.DRAWING_MODES.VIEW_DRAW) && (d.drawMode !== d.DRAWING_MODES.NONE)
 }">
 </svg-icon>
-<div class="color-picker-btn" ng-if="d.isTeacher" ng-click="d.pickColor()">test</div>
+<div class="color-picker-btn" ng-style="{'background-color': d.colorPicked}" ng-if="d.isTeacher" ng-click="d.pickColor()"></div>
 <znk-color-picker picked-color-cb="d.returnedColor" ng-if="d.showColorPicker"></znk-color-picker>
 <svg-icon name="znk-exercise-eraser"
           ng-click="d.toolClicked(d.TOOLS.ERASER)"
