ofir/figure-margin-0

--- a/src/components/znkExercise/main.scss
+++ b/src/components/znkExercise/main.scss
@@ -20,6 +20,9 @@ znk-exercise {
 
     question-builder, questions-carousel, answer-builder {
         display: block;
+        figure {
+            margin: 0;
+        }
     }
 
     question-builder {
