ofir/redactor-roman-fix

--- a/src/components/znkExercise/main.scss
+++ b/src/components/znkExercise/main.scss
@@ -61,4 +61,10 @@ znk-exercise {
             opacity: 0;
         }
     }
+
+    .answer-container, .question-container {
+        .redactor-roman-list {
+            list-style-type: upper-roman;
+        }
+    }
 }
