--- a/src/components/znkExercise/core/template/btnSectionDesktop.template.html
+++ b/src/components/znkExercise/core/template/btnSectionDesktop.template.html
@@ -14,6 +14,7 @@
 <div class="done-btn-wrap show-opacity-animate" ng-if="vm.showDoneButton">
     <button tabindex="0"
             class="done-btn"
-            ng-click="onDone()">DONE
+            translate="ZNK_EXERCISE.DONE"
+            ng-click="onDone()">
     </button>
 </div>
