--- a/src/components/znkExercise/core/template/znkExerciseReviewSectionBtn.template.html
+++ b/src/components/znkExercise/core/template/znkExerciseReviewSectionBtn.template.html
@@ -1,5 +1,5 @@
 <div class="btn-section" ng-if="showBtn">
     <div class="review-btn-wrap show-opacity-animate ng-scope">
-        <button class="review-btn" ng-click="onReview()">CONFIRM REVIEW</button>
+        <button class="review-btn" ng-click="onReview()" translate="ZNK_EXERCISE.CONFIRM_REVIEW"></button>
     </div>
 </div>
